changed query param naming
